--- a/order-summary-component-main/styles.css
+++ b/order-summary-component-main/styles.css
@@ -13,4 +13,27 @@
 }
 body{
     font-family: 'Red Hat Display', sans-serif;
+    background-color: var(--pale-blue);
+    display: flex;
+    min-height: 100vh;
+    padding: 40px 0;
 }
+
+.card{
+    width: 340px;
+    background-color: #fff;
+    margin: auto;
+    border-radius: 2em;
+    overflow: hidden;
+}
+
+.card::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 180px;
+    background-image: url(./images/illustration-hero.svg);
+    background-size: cover;
+    background-position: center;
+}
+
