--- a/order-summary-component-main/styles.css
+++ b/order-summary-component-main/styles.css
@@ -14,6 +14,7 @@
 body{
     font-family: 'Red Hat Display', sans-serif;
     background-color: var(--pale-blue);
+    background-repeat: no-repeat;
     display: flex;
     min-height: 100vh;
     padding: 40px 0;
@@ -98,6 +99,12 @@ body{
     box-shadow: none;
 }
 
+@media (min-width:768px){
+    body{
+        background-image: url(./images/pattern-background-desktop.svg);
+        background-repeat: no-repeat;
+    }
+}
 
 
 
